--- a/kubernetes/nginx.yaml
+++ b/kubernetes/nginx.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: nginx:latest
+        image: artifactory.nike.com.cn:9002/nginx
         ports:
         - containerPort: 80
